fix(pod-landing-page): form error message spacing in mobile

--- a/pod-request-access-landing-page/assets/src/scss/elements/_forms.scss
+++ b/pod-request-access-landing-page/assets/src/scss/elements/_forms.scss
@@ -22,6 +22,7 @@ input {
 
   &.invalid {
     outline: var(--c-coral-red) dashed 2px;
+    margin-bottom: 0.8rem;
   }
 
   &.valid {
