--- a/pod-request-access-landing-page/assets/src/scss/modules/_access-form.scss
+++ b/pod-request-access-landing-page/assets/src/scss/modules/_access-form.scss
@@ -27,16 +27,19 @@
 
   &__error-message {
     grid-column: 1 / -1;
-    margin: .8rem 0 0;
+    margin: 0 0 1.6rem;
     font-size: 1.2rem;
     font-weight: 700;
     line-height: 1.4rem;
     color: var(--c-coral-red);
+    text-align: center;
 
     @include media('>tablet') {
       position: absolute;
       top: 100%;
       left: 3.2rem;
+      text-align: left;
+      margin: 0;
     }
   }
 }
